; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/gh60/satan/keymaps/gipsy-king/extr_keymap.c_remove_char.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/gh60/satan/keymaps/gipsy-king/extr_keymap.c_remove_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cursor_pos = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @remove_char() #0 {
  %1 = load i64, i64* @cursor_pos, align 8
  %2 = icmp eq i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %12

4:                                                ; preds = %0
  %5 = load i64, i64* @cursor_pos, align 8
  %6 = call i32 @rgblight_sethsv_at(i32 0, i32 0, i32 0, i64 %5)
  %7 = load i64, i64* @cursor_pos, align 8
  %8 = sub nsw i64 %7, 1
  %9 = call i32 @rgblight_sethsv_at(i32 0, i32 0, i32 0, i64 %8)
  %10 = load i64, i64* @cursor_pos, align 8
  %11 = sub nsw i64 %10, 1
  store i64 %11, i64* @cursor_pos, align 8
  br label %12

12:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @rgblight_sethsv_at(i32, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
